--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "postinstall": "node ./node_modules/vscode/bin/install",
     "test": "npm run compile && node ./node_modules/vscode/bin/test"
   },
-  "repository": "https://github.com/wboka/vscode-rst2html",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wboka/vscode-rst2html"
+  },
   "devDependencies": {
     "typescript": "^2.6.1",
     "vscode": "^1.1.6",
@@ -46,5 +49,10 @@
   },
   "dependencies": {
     "rst2html": "^1.0.4"
-  }
+  },
+  "galleryBanner": {
+    "color": "#5a6f8e",
+    "theme": "dark"
+  },
+  "icon": "rst2html.png"
 }
