--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "convert"
   ],
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
+    "vscode:prepublish": "webpack --mode production",
+    "compile": "webpack --mode none",
+    "watch": "webpack --mode none --watch",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "test": "npm run compile && node ./node_modules/vscode/bin/test",
     "format": "prettier --write **/*.{ts,json}"
@@ -45,11 +45,14 @@
     "@types/mocha": "^2.2.42",
     "@types/node": "^7.0.43",
     "prettier": "1.17.1",
+    "ts-loader": "^6.0.0",
     "tslint": "^5.8.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^2.6.1",
-    "vscode": "^1.1.34"
+    "vscode": "^1.1.34",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
     "rst2html": "^1.0.4"
